tdf#149322 apparent distortion of glyphs on scrolling

sometimes there's a 1 pixel difference here vs to the amount seen in
Window::Scroll. The little misplaced tails of glyphs are actually in the
right place, and it is the large rectangle of copied text above those
that is in the wrong place.

Subtract these origins while in logic space, before turning that
result back to pixels to get consistent results for equal distances.

Change-Id: I37e77f38b95456cee32ff44cde2893986d52cde3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142789
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>